--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,10 +38,15 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    //searchview dependency
+    implementation 'androidx.appcompat:appcompat:1.6.0-rc01'
     //concat dependency
     implementation "androidx.recyclerview:recyclerview:1.3.0-rc01"
+    //apache implementation for csv reader
+    implementation 'org.apache.commons:commons-csv:1.5'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    implementation "org.jetbrains.kotlin:kotlin-script-runtime:1.7.10"
 }
